# liquiditylife

./: .gitignore  404.html  CITATION.cff  CLAUDE.md  LICENSE  README.md  RationalReminderTranscript.md  SPEC.md  V2_ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
calculator/: index.html
calibrations/: index.html
docs/: calculator.md  calibrations.md  index.md  mkdocs.yml  model.md  numerics.md  viz.md
examples/: quickstart.py
model/: index.html
numerics/: index.html
scripts/: make_charts.py
search/: search_index.json
src/liquiditylife/: __init__.py  _types.py
src/liquiditylife/calculator/: __init__.py  mappings.py  recommend.py  tables.py
src/liquiditylife/calculator/data/: default_tables.json
src/liquiditylife/calibrations/: __init__.py  adams_baseline.py  bundles.py  registry.py  toy_demo.py
src/liquiditylife/cli/: main.py
src/liquiditylife/core/: __init__.py  lifecycle.py  policy.py  preferences.py  state.py
src/liquiditylife/io/: __init__.py  cache.py
src/liquiditylife/model/: __init__.py  budget.py  transitions.py  utility.py
src/liquiditylife/plotting/: __init__.py  age_profiles.py  comparisons.py  surfaces.py
src/liquiditylife/processes/: __init__.py  adjustment_cost.py  asset_returns.py  illiquid.py  income.py
src/liquiditylife/simulate/: __init__.py  engine.py  result.py
src/liquiditylife/solve/: __init__.py  bellman.py  grids.py  interpolation.py  numba_kernels.py  quadrature.py  solver.py
src/liquiditylife/sweep/: __init__.py  surface.py
src/liquiditylife/vizdata/: __init__.py  export.py
tests/: conftest.py
tests/numerical/: test_bellman.py  test_interpolation.py  test_numba_kernels.py  test_simulation_reproducibility.py  test_solver_convergence.py
tests/regression/: test_comparative_statics.py  test_directional.py
tests/unit/: test_adjustment_cost.py  test_asset_returns.py  test_budget.py  test_calculator.py  test_calibrations.py  test_cli.py  test_grids.py  test_illiquid.py  test_income.py  test_io.py  test_lifecycle.py  test_preferences.py  test_quadrature.py  test_utility.py  test_vizdata.py
viz/: index.html
